# dolas

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Developer.md  LICENSE  README.md  RenderObject和RenderModel使用说明.md  build-debug.bat  build-minSizeRel.bat  build-relWithDebInfo.bat  build-release.bat  imgui.ini  setup.bat  vcpkg-configuration.json  vcpkg.json  相机控制说明.md
engine/: CMakeLists.txt
engine/base/: dolas_dx_trace.cpp  dolas_paths.h
engine/common/: dolas_color.cpp  dolas_hash.cpp  dolas_hash.h  rsd_field.h
engine/core/: dolas_math.cpp
engine/manager/: dolas_asset_manager.cpp  dolas_buffer_manager.cpp  dolas_buffer_manager.h  dolas_imgui_manager.h  dolas_input_manager.cpp  dolas_render_entity_manager.h  dolas_render_resource_manager.cpp  dolas_render_scene_manager.h  dolas_render_view_manager.cpp  dolas_render_view_manager.h  dolas_task_manager.h  dolas_test_manager.h  dolas_texture_manager.h
engine/render/: dolas_buffer.cpp  dolas_mesh.h  dolas_render_entity.h  dolas_render_pipeline.cpp  dolas_render_scene.cpp  dolas_render_scene.h  dolas_render_view.h
engine/rsd/: camera.h  entity.h  material.h  mesh.h  scene.h
precompile/: CMakeLists.txt
precompile/cmake/: rsd_cleanup_headers.cmake  rsd_generate_one.cmake
precompile/src/: main.cpp
source/: CMakeLists.txt  dolas.cpp  dolas.h  dolas_common.h  dolas_engine.cpp  dolas_engine.h  dolas_main.cpp  dolas_render_entity.cpp  dolas_render_entity.h  dolas_render_pipeline.cpp  dolas_render_pipeline.h  dolas_rhi.cpp  dolas_rhi.h  dolas_scene.cpp  dolas_scene.h  dolas_timer.cpp  dolas_timer.h  dolas_triangle.cpp  dolas_triangle.h  dxgi_helper.cpp  dxgi_helper.h  main.cpp
source/Function/FrameWork/: Dolas.cpp  Dolas.h
source/Function/Render/RenderEntity/: RenderEntity.cpp  RenderEntity.h
source/Function/Render/RenderPipeline/: RenderPipeline.cpp  RenderPipeline.h
source/Function/Render/RenderPipelineManager/: RenderPipelineManager.cpp  RenderPipelineManager.h
source/Function/Render/RenderResourceManager/: RenderResourceManager.cpp  RenderResourceManager.h
source/Function/Render/RenderScene/: RenderScene.cpp  RenderScene.h
source/Function/Render/RenderSceneManager/: RenderSceneManager.cpp  RenderSceneManager.h
source/Function/Render/TextureManager/: TextureManager.cpp  (+1 more)
source/base/: dolas_base.h  dolas_dx_trace.cpp  dolas_dx_trace.h  dolas_paths.cpp  dolas_paths.h  dolas_string_util.h  dolas_string_utils.h
source/common/: dolas_color.h  dolas_hash.h  rsd_field.h
source/core/: ThreadPool.h  dolas_engine.cpp  dolas_engine.h  dolas_math.cpp  dolas_math.h  dolas_rhi.cpp  dolas_rhi.h  dolas_rhi_common.h  dxgi_helper.cpp
source/manager/: dolas_asset_manager.cpp  dolas_asset_manager.h  dolas_buffer_manager.cpp  dolas_buffer_manager.h  dolas_debug_draw_manager.cpp  dolas_debug_draw_manager.h  dolas_geometry_manager.cpp  dolas_geometry_manager.h  dolas_imgui_manager.cpp  dolas_imgui_manager.h  dolas_input_layout_manager.cpp  dolas_input_layout_manager.h  dolas_input_manager.cpp  dolas_input_manager.h  dolas_log_system_manager.cpp  dolas_material_manager.cpp  dolas_material_manager.h  dolas_mesh_manager.cpp  dolas_mesh_manager.h  dolas_render_camera_manager.cpp  dolas_render_camera_manager.h  dolas_render_entity_manager.cpp  dolas_render_entity_manager.h  dolas_render_model_manager.cpp  dolas_render_model_manager.h  dolas_render_object_manager.cpp  dolas_render_pipeline_manager.cpp  dolas_render_pipeline_manager.h  dolas_render_primitive_manager.cpp  dolas_render_primitive_manager.h  dolas_render_resource_manager.cpp  dolas_render_resource_manager.h  dolas_render_scene_manager.cpp  dolas_render_scene_manager.h  dolas_render_state_manager.cpp  dolas_render_state_manager.h  dolas_render_view_manager.cpp  dolas_shader_manager.cpp  dolas_shader_manager.h  dolas_task_manager.cpp  (+7 more)
source/render/: dolas_buffer.cpp  dolas_buffer.h  dolas_material.cpp  dolas_material.h  dolas_mesh.cpp  dolas_mesh.h  dolas_render_camera.cpp  dolas_render_camera.h  dolas_render_entity.cpp  dolas_render_entity.h  dolas_render_model.cpp  dolas_render_model.h  dolas_render_object.cpp  dolas_render_object.h  dolas_render_pipeline.cpp  dolas_render_pipeline.h  dolas_render_primitive.cpp  dolas_render_primitive.h  dolas_render_resource.cpp  dolas_render_resource.h  dolas_render_scene.cpp  dolas_render_scene.h  dolas_render_view.cpp  dolas_render_view.h  dolas_shader.cpp  dolas_shader.h  dolas_texture.cpp  dolas_texture.h
source/rsd/: camera.h  entity.h  material.h  mesh.h  rsd_field.h  scene.h  topology.h
source/test/: dolas_test.cpp  dolas_test.h
src/dolas_client/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/base/: dolas_log.h  dolas_paths.h  dolas_string_util.cpp
src/engine/common/: dolas_color.cpp  dolas_hash.cpp
src/engine/core/: dolas_engine.cpp  dolas_math.h
src/engine/manager/: dolas_asset_manager.h  dolas_debug_draw_manager.cpp  dolas_debug_draw_manager.h  dolas_imgui_manager.cpp  dolas_log_system_manager.cpp  dolas_log_system_manager.h  dolas_material_manager.cpp  dolas_render_entity_manager.cpp  dolas_render_object_manager.h  dolas_task_manager.cpp  dolas_test_manager.cpp  dolas_texture_manager.cpp  dolas_tick_manager.cpp  dolas_timer_manager.cpp  dolas_timer_manager.h
src/engine/render/: dolas_material.h  dolas_render_camera.h  dolas_render_entity.cpp  dolas_render_object.cpp  dolas_texture.h  dolas_transform.h
src/engine_runtime/dolas_function/: CMakeLists.txt
src/engine_runtime/dolas_resource/: CMakeLists.txt
src/engine_test/: CMakeLists.txt  main.cpp  path_util_test.cpp  vector2_test.cpp  vector3_test.cpp
src/engine_test/asset_manager/: GetAsset.cpp
src/engine_tool/dolas_shader_compiler/: CMakeLists.txt
src/model_parser/: CMakeLists.txt
src/render_engine/: CMakeLists.txt
src/render_engine/framework/: d3d_app.h  game_timer.h
src/render_engine/render/: a.h  dolas_renderable.cpp  dolas_renderable.h
src/render_engine/render_scene/: dolas_render_scene.h
src/render_engine/renderer/: dolas_renderer.cpp  dolas_renderer.h
tool/dolas_editor/: CMakeLists.txt
(+272 files in other folders)
